--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@
 /infra/terraform/terraform.tfstate*
 /node_modules
 /infra/ansible/jenkins-cli.jar
+/infra/terraform/terraform-key.pem
+/infra/terraform/public_ip.txt
 .env
