--- a/infra/ansible/playbook-installHelm.yaml
+++ b/infra/ansible/playbook-installHelm.yaml
@@ -2,7 +2,12 @@
 - name: Install Helm on Ubuntu
   hosts: worker
   become: true
-
+  vars:
+      source_secret_file: "../kubernetes/Chart-bot"
+      destin_file: "/home/ubuntu"
+      env_file: "../../.env"
+      helm_instance_name: "telegrambot"
+      chart_dir_path: "./Chart-bot"
   tasks:
     - name: Add Helm GPG key
       shell: |
@@ -18,3 +23,29 @@
 
     - name: Add Helm repository
       shell: sudo apt-get install helm
+
+    - name: Display BOT_TOKEN environment variable
+      shell: "sed -n 's/^BOT_TOKEN=//p' {{ env_file }}"
+      register: BOT_TOKEN
+
+    - name: Display API_TOKEN environment variable
+      shell: "sed -n 's/^API_TOKEN=//p' {{ env_file }}"
+      register: API_TOKEN
+    
+    - name: Display JENKINS_URL environment variable
+      shell: "sed -n 's/^JENKINS_URL=//p' {{ env_file }}"
+      register: JENKINS_URL
+
+    - name: Display JENKINS_PASSWORD environment variable
+      shell: "sed -n 's/^JENKINS_PASSWORD=//p' {{ env_file }}"
+      register: JENKINS_PASSWORD
+
+    - name: Display JENKINS_USERNAME environment variable
+      shell: "sed -n 's/^JENKINS_USERNAME=//p' {{ env_file }}"
+      register: JENKINS_USERNAME
+
+    - name: copy Chart-bot directory
+      copy: src={{ source_secret_file }} dest={{ destin_file }} mode=0555
+
+    - name: copy Chart-bot directory
+      shell: "helm upgrade --install {{helm_instance_name}} {{chart_dir_path}} --set BOT_TOKEN={{BOT_TOKEN}},API_TOKEN={{API_TOKEN}},JENKINS_URL={{JENKINS_URL}},JENKINS_PASSWORD={{JENKINS_PASSWORD}},JENKINS_USERNAME={{JENKINS_USERNAME}}"
